Removed a bad fix for the time labeling appearing off screen.

--- a/tests/style.css
+++ b/tests/style.css
@@ -100,7 +100,7 @@ body {
 	white-space: nowrap;
 	cursor: default;
 	box-shadow: 0px 0px 0px 2px white, 0px 0px 0px 3px black;
-	/* left: 3px; */
+	left: 3px;
 
 }
 
